fix navigation cut on Safari

--- a/assets/styles/global/_base.scss
+++ b/assets/styles/global/_base.scss
@@ -71,7 +71,8 @@ a:hover {
   }
 
   @media (min-width: 768px) {
-    padding: 0 $container-padding;
+    padding: 5px $container-padding 0;
+    margin-top: -5px;
     font-size: inherit;
   }
 }
